@@ -5755,8 +5755,10 @@ def mode_groups(phase, what):
         html.write('<tr class="data %s0">' % odd)
         edit_url = make_link([("mode", "edit_%s_group" % what), ("edit", name)])
         delete_url = html.makeactionuri([("_delete", name)])
+        clone_url    =  make_link([("mode", "edit_%s_group" % what), ("clone", name)])
         html.write("<td class=buttons>")
         html.icon_button(edit_url, _("Properties"), "edit")
+        html.icon_button(clone_url, _("Create a copy of this group"), "clone")
         html.icon_button(delete_url, _("Delete"), "delete")
         html.write("</td><td>%s</td><td>%s</td>" % (name, alias))
         if what == "contact":
@@ -5821,7 +5823,8 @@ def mode_edit_group(phase, what):
     html.help(_("The name of the group is used as an internal key. It cannot be "
                  "changed later. It is also visible in the status GUI."))
     if new:
-        html.text_input("name")
+        clone_group = html.var("clone")
+        html.text_input("name", clone_group or "")
         html.set_focus("name")
     else:
         html.write(name)
@@ -5829,7 +5832,12 @@ def mode_edit_group(phase, what):
 
     forms.section(_("Alias"))
     html.help(_("An Alias or description of this group."))
-    html.text_input("alias", name and groups.get(name, "") or "")
+    alias = groups.get(name, "")
+    if not alias and clone_group:
+        alias = groups.get(clone_group, "")
+    if not alias:
+        alias = name
+    html.text_input("alias", alias)
     forms.end()
     html.button("save", _("Save"))
     html.hidden_fields()
